# stroke_api_app

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
api/api/: index.html
api/filters/: index.html
data/: stroke_data.parquet
docs/: donnees.md  index.md
docs/api/: api.md  filters.md  index.md
docs/streamlit/: index.md  modules.md  utils.md
donnees/: index.html
search/: search_index.json
streamlit/: index.html
streamlit/modules/: index.html
streamlit/utils/: index.html
streamlit_app/: app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/components/: description_variables.py
streamlit_app/modules/: accueil.py  config.py  donnees.py  statistiques.py  visualisations.py
streamlit_app/utils/: data_utils.py  stats_utils.py  viz_utils.py
stroke_api/: API_tuto.ipynb  api.py  filters.py  main.py
