[tool.poetry]
name = "stroke-api"
version = "0.1.0"
description = "Ce projet contient les fichiers nécessaires au brief Stroke data - Développement d'une API REST et visualisation."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
fastapi = {extras = ["standard"], version = "^0.116.1"}
streamlit = "^1.47.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
numpy = "^2.3.2"
plotly = "^6.2.0"
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
